--- a/day3.html
+++ b/day3.html
@@ -12,5 +12,8 @@
         <div style="background-color: white; float: left; width: 33.3%; height: 100px;"></div>
         <div style="background-color: green; float: right; width: 33.3%; height: 100px;"></div>
     </div>
+
+    <div>hello world this is a new update to be pushedgi</div>
+    <b>hello</b>
 </body>
 </html>
